totalGames 변수 추가. playGames() 보강. 게임 시작 시 변수 초기화 및 결과 저장. ajax-josn 관련 파일 추가했지만 동작 안함

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <title>Stategy Competition</title>
   </head>
   <body>
+    <!-- <input type="button" name="name" value="ajax"> -->
+    <div id="students"></div>
     <script src="util.js" charset="utf-8"></script>
     <script type="text/javascript">
+    // console.log(JSON.stringify(student2, null, 2));
+    // console.log(JSON.stringify(student1));
     playGame(student1, student2);
-    // console.log(student1.getStrategy(5));
+    console.log(student1, student2);
     </script>
   </body>
 </html>
