util.js → core.js 로 이름변경. 생성자&프로토타입 패턴 이용.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <!-- <input type="button" name="name" value="ajax"> -->
     <div id="students"></div>
-    <script src="util.js" charset="utf-8"></script>
+    <script src="core.js" charset="utf-8"></script>
     <script type="text/javascript">
     // console.log(JSON.stringify(student2, null, 2));
     // console.log(JSON.stringify(student1));
