--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="students"></div>
     <script src="core.js" charset="utf-8"></script>
     <script type="text/javascript">
-    // console.log(JSON.stringify(student2, null, 2));
+    console.log(JSON.stringify(student1, null, 2));
     // console.log(JSON.stringify(student1));
     playGame(student1, student2);
     console.log(student1, student2);
