--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <body>
     <!-- <input type="button" name="name" value="ajax"> -->
     <div id="students"></div>
+    <!-- <script src="ajax.js" charset="utf-8"></script> -->
     <script src="core.js" charset="utf-8"></script>
     <script type="text/javascript">
-    console.log(JSON.stringify(student1, null, 2));
+    // console.log(JSON.stringify(student1, null, 2));
     // console.log(JSON.stringify(student1));
-    playGame(student1, student2);
-    console.log(student1, student2);
+    // playGame(student1, student2);
+    // console.info("player infos", student1, student2);
     </script>
   </body>
 </html>
